--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Poppins:wght@300&display=swap');
+*{
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+span{
+  margin: auto 20px;
+  font-weight: bold;
+  text-transform: capitalize;
+  letter-spacing: 2px;
+}
+span:hover{
+  color: blueviolet !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h3{
+  border-bottom: 10px solid blueviolet;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.repos{
+  height:50px;
+  width:216px;
+  display: inline-block;
+  margin: 10px 10px 10px 40px;
+  padding: 10px;
+  cursor: pointer;
+  overflow: hidden;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.repos:hover{
+  font-size: 16px;
+  transition: 0.2s all ease-out;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tables{
+  font-weight: bold;
 }
